# kioskC2

./: .gitignore  LOCAL.md  app.py  build-client.py  client.py  docker-compose.override.yaml.example  docker-compose.prod.yaml  docker-compose.yaml  jetstreamclient.py
api/clients/: base.py  clients.py
api/clients/plugins/websocket/: wsclient.js  wsclient.py
api/clients/plugins/xhr/: xhrclient.js  xhrclient.py
client-builder/: Dockerfile  builder.js  package-lock.json  package.json  rollup.config.js
clients/: Dockerfile  pyproject.toml
clients/builder/: builder.js  package-lock.json  rollup.config.js
clients/c2/clients/: app.py  base.py  hub_client.py  nats_client.py
clients/c2/clients/page/: Dockerfile  builder.js  builder.py  dev.html.jinja  index.html.jinja  package-lock.json  rollup.config.js
clients/c2/clients/page/src/: communication_plugin.js  script.js
clients/c2/clients/plugins/: plugins.js  plugins.py
clients/c2/clients/plugins/websocket/: wsclient.js  wsclient.py
clients/c2/clients/plugins/xhr/: xhrclient.js  xhrclient.py
clients/client/: communication_plugin.js  script.js
dex/: config.yml
manager/: Dockerfile  pyproject.toml
manager/c2/manager/: base.py  callback_manager.py  client.py  main.py
nginx/: default.conf
page/: builder.py  index.html.jinja  package-lock.json  package.json  rollup.config.js
page/src/: bundle.js  communication_plugin.js  example_plugin.js  plugins.js  script.js  websocket_plugin.js
page/src/plugins/: testplugin.js  wsclient.js  xhrclient.js
plugins/: Dockerfile  Readme.md  pyproject.toml
plugins/c2/plugins/audio/: audio.js  audio.py
plugins/c2/plugins/camera/: camera.js  camera.py
plugins/c2/plugins/clipboard/: clipboard.py
traefik/: dynamic.prod.yml.example  dynamic.yml  traefik.yml
ui/: Dockerfile
ui/backend/: Dockerfile  app.py  pyproject.toml
ui/backend/c2/backend/: app.py  classes.py  state.py
ui/frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json
ui/frontend/src/: index.html  styles.scss
website-bundler/: Dockerfile  pyproject.toml
website-bundler/c2/bundler/: cors_bypass.py  fetch.py  main.py  preview.py
(+30 files in other folders)
